# plt-tools

./: .coverage  .coveragerc  .gitignore  Pipfile  README.md  Risk Aggregation POC - PLTs.ipynb  Risk Aggregation POC.ipynb  pyproject.toml
.circleci/: config.yml
aggregationtools/: __init__.py  compute_ep_functions.R  elt.py  elt_calculator.py  ep_curve.py  plt.py  plt_calculator.py
plttools/: __init__.py  ep_curve.py  ep_settings.py  marginal_impact.py  plt.py  plt_calculator.py
sample_data/: 3265401_Risk_Aggregation_POC__PORTFOLIO__2_PLT_Account_GU_0.parquet
tests/: test_elt.py  test_elt_calculator.py  test_ep_curve.py  test_ep_settings.py  test_marginal_impact.py  test_plt.py  test_plt_calculator.py
tests/sample_elt/: eltA.csv  eltB.csv
